# rust_newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  configuration.yaml
.sqlx/: query-d212b169e6a5eda7dd5a7684283b00e659ea5e47560a78ccbf79728b47bdd544.json
configuration/: base.yaml
migrations/: 20240305191152_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
