[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"


[dependencies]
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
actix-web = "4"
config = "^0.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "^0.2.0"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
unicode-segmentation = "1"
validator = "^0.18"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["actix-web"] }

[dependencies.reqwest]
version = "^0.12.0"
default-features = false
features = ["json", "rustls-tls"]

[dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    # "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
once_cell = "1"
claims = "0.7"
fake = "^2.3"
quickcheck = "^1.0.0"
quickcheck_macros = "^1.0.0"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "^0.6.0"
